--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
         poetry install
     - name: Test with pytest
       run: |
-        PYTHONPATH=src poetry run pytest
+        poetry run pytest
     - name: Check Code
       run: |
         poetry run autopep8 --jobs 0 --exit-code --diff .
