--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,12 +31,17 @@ jobs:
         python -m pip install --upgrade pip
         curl -sSL https://install.python-poetry.org | python - --version 1.8.2
         poetry install
+        which python
+        poetry run which python
+        echo $PATH
     - name: Test with pytest
       run: |
         poetry run pytest
     - name: Check Code
       run: |
         poetry run autopep8 --jobs 0 --exit-code --diff .
+    # TODO Test find-tests, but it cannot be found even after doing:
+    # export PATH="$PATH:$HOME/.local/bin"
     - name: Test CLI
       run: |
         export PATH="$PATH:$HOME/.local/bin"
